--- a/src/views/studio/StudioView.module.scss
+++ b/src/views/studio/StudioView.module.scss
@@ -6,7 +6,6 @@
     min-height: 100vh;
 
     background-color: #f3f3f3;
-    z-index: -2;
     position: relative;
 }
 
